---------------------------------------------------------------------------------------------------
Version: 0.16.0
Date: <unknown>
  Major Changes:
    - Added nuclear long-handed inserter.
    - Added nuclear stack inserter.
    - Added nuclear stack filter inserter.
  Balancing:
    - Macerator and compressor crafting speed 0.75 ==> 1
    - Macerator and compressor energy usage 300kW ==> 150kW
  Graphics:
    - Updated nuclear assembling machine textures.
---------------------------------------------------------------------------------------------------
Version: 0.15.4
Date: 25.04.2019
  Fixes:
    - Fixed nuclear inserter entity icon.
---------------------------------------------------------------------------------------------------
Version: 0.15.3
Date: 24.04.2019
  Fixes:
    - Fixed nuclear underground belt side loading sprite.
---------------------------------------------------------------------------------------------------
Version: 0.15.2
Date: 24.04.2019
  Fixes:
    - Fixed hardened steel furnace lr texture filename.
---------------------------------------------------------------------------------------------------
Version: 0.15.1
Date: 14.04.2019
  Locale:
    - Russian:
      - Ядрённый сборщик ==> Ядрённый сборочный автомат.
    - Ukrainian:
      - Ядерний складальник ==> Ядерний складальний автомат.
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 13.04.2019
  Major changes:
    - Removed hardened burner mining drill.
    - Added steel and electric hardened furnaces.
    - Removed "Hardened buildings" technology.
    - Added technologies for hardened furnaces.
  Balancing:
    - Changed hardened electric mining drill mining area to 6x6.
    - Hardened stone furnace:
      - Crafting speed 1.3 ==> 1.25
      - Health 600 ==> 300
    - Nuclear assembling machine:
      - Max health 500 ==> 450
      - Crafting speed 5 ==> 2
      - Energy usage 500kW ==> 1000kW