@@ -8,6 +8,7 @@ Date: <unknown>
   Balancing:
     - Macerator and compressor crafting speed 0.75 ==> 1
     - Macerator and compressor energy usage 300kW ==> 150kW
+    - Removed coal compressing recipe
   Graphics:
     - Updated nuclear assembling machine textures.
 ---------------------------------------------------------------------------------------------------
